[package]
name = "brave_and_upright"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
ilattice = { version = "0.3.0", features = ["glam", "morton-encoding"] }
ndshape = "0.3.0"
ndcopy = "0.3.0"
bitflags = "2.0.2"
bevy_utils = "0.12"
bevy_egui = "0.23"